--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,12 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.8",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-textarea-autosize": "^8.3.4"
   }
 }
