--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,7 +4,21 @@
     "target": "es5",
     "module": "es6",
     "jsx": "react",
+    "moduleResolution": "node",
     "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@public/*": ["public/*"],
+      "@http/*": ["src/http/*"],
+      "@redux/*": ["src/redux/*"],
+      "@hooks/*": [ "src/hooks/*"],
+      "@services/*": ["src/services/*"],
+      "@pages/*": ["src/pages/*"],
+      "@modals/*": ["src/modals/*"],   
+      "@components/*": ["src/components/*"],
+      "@entities/*": ["src/entities/*"],
+      "@helpers/*": ["src/helpers/*"]
+    }
   }
 }
