--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "react-textarea-autosize": "^8.3.4"
   }
 }
