--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": ".",
     "paths": {
       "@public/*": ["public/*"],
+      "@routing/*": ["src/routing/*"],
       "@http/*": ["src/http/*"],
       "@redux/*": ["src/redux/*"],
       "@hooks/*": [ "src/hooks/*"],
